<resources>
    <string name="app_name">Bike Rider</string>
    <string name="btn_go_to_second_screen">Go to Second Screen</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conpassword">Confirm Password</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup2">Do not have an account? </string>
    <string name="signup">SignUp</string>
    <string name="login2">Already have an account? </string>

    <string name="software_engineer_age">21</string>
    <string name="software_engineer_android_com">muhammadhamza@venturedive.com</string>
    <string name="software_engineer">muhammadhamza</string>
    <string name="password_sample">123456</string>
    <string name="password_confirm">123456</string>
    <string name="empty_field">You must add %d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johnDoe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>
